fix : recipe page - product list - icon information list overlap problem, image height

--- a/src/app/recipes/[recipeKey]/components/IngredientInformation/style.module.scss
+++ b/src/app/recipes/[recipeKey]/components/IngredientInformation/style.module.scss
@@ -23,9 +23,14 @@
 .icon-info {
   display: flex;
   justify-content: flex-end;
+  flex-wrap: wrap;
   padding: 10px;
   gap: 0.5rem;
   font-size: 0.9rem;
+
+  @media #{$tablet} {
+    justify-content: center;
+  }
 
   &__item {
     display: flex;
@@ -40,4 +45,8 @@
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   gap: 1.5rem;
   padding: 10px;
+
+  @media #{$tablet} {
+    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+  }
 }
